# rbmenu-tui

./: Cargo.toml  README.md  help.md  theme.toml
src/: actions.rs  error.rs  keybinds.rs  lib.rs  main.rs  state.rs  utils.rs
src/views/: bm_detail.rs  bm_list.rs  cmd_line.rs  edit.rs  mod.rs
