[package]
name = "rbmenu-tui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#rbmenu = {path="../rbmenu"}
rbmenu = "0.6.1"
cursive ={version=  "0.16.3", features=["toml"]}
cursive-aligned-view ={version=  "0.5.0"}
home = "0.5.3"
clipboard = "0.5.0"
